# Bucket

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_multipart_upload_id.py  0003_folders.py
app/: config.py  db.py  deps.py  filesystem.py  main.py  models.py  schemas.py  security.py  storage.py
app/routers/: auth.py  files.py  filesystem.py  public.py  shares.py
scripts/: entrypoint.sh  smoke_test.py
tests/: conftest.py  test_auth.py  test_files.py  test_folders.py
web/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/files/: FileBrowser.tsx  FileIcon.tsx  FileTable.tsx  FolderBreadcrumbs.tsx  FolderNameDialog.tsx  ShareDialog.tsx  UploadDropzone.tsx  UploadProgressList.tsx
web/src/components/layout/: AppShell.tsx  ProtectedRoute.tsx  Sidebar.tsx  TopBar.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx
web/src/hooks/: useFiles.ts  useFilesystem.ts  useTheme.ts  useUpload.ts
web/src/lib/: auth-store.ts  axios.ts  collectFiles.ts  uploadClient.ts  uploadQueue.ts  utils.ts
web/src/lib/api/: auth.ts  files.ts  filesystem.ts  public.ts  shares.ts
web/src/pages/: DashboardPage.tsx  FileDetailPage.tsx  LoginPage.tsx  PublicSharePage.tsx  RegisterPage.tsx
web/src/styles/: globals.css
